# PokerHandEvaluator-wasm

./: .gitignore  .npmignore  CMakeLists.txt  LICENSE  README.md  demo.html  example.js  jest.config.js  package-lock.json  package.json  phevaluator.d.ts  server.js  test.js
.github/workflows/: npm-publish.yml  test.yml
__tests__/: card-utilities.test.js  error-handling.test.js  object-methods.test.js  phevaluator.test.js  string-methods.test.js  test-helpers.js
benchmarks/: performance.js
examples/: esm-example.mjs  example.js
lib/: phevaluator.d.ts  phevaluator.mjs
src/: phevaluator_wasm.cpp
